[package]
name = "flashpointvm-mount-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.2"
tokio = { version = "1", features = ["full"] }
fnv = "1.0.7"
parking_lot = "0.12.1"

[features]
docker = []