[package]
name = "flashpointvm-mount-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.2"
tokio = { version = "1", features = ["full"] }
fnv = "1.0.7"
parking_lot = "0.12.1"
urlencoding = "2.1.0"
lazy_static = "1.4.0"

[features]
docker = []

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true # Enable link-time optimization
codegen-units = 1 # Warning: slow! Use only one codegen unit for the most optimization.
panic = "abort"